--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,10 +4,13 @@
 $primary: rgb(14, 20, 26)
 $secondary: rgb(0, 212, 106)
 
+$prime: #292E3D
+$second: #5DD7C5
+
 html, body
 	font-family: "Open Sans", "Roboto",sans-serif
-	color: $secondary
-	background: $primary
+	color: $second
+	background: $prime
 
 .container
 	position: absolute
@@ -46,7 +49,7 @@ h4
 
 	transition: all .3s
 	border-bottom: 1px solid transparent
-	
+
 	&:hover
 		cursor: pointer
-		border-bottom: 1px solid $secondary
+		border-bottom: 1px solid $second
